# desktop_gui_mcp

./: .gitignore  AGENT.md  AGENTS.md  README.md  package-lock.json  pyproject.toml
desktop_gui_mcp/: __init__.py  __main__.py  server.py
